# steady-wave

./: .env.example  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  test.json
.cursor/rules/: commit-message.md
.cursor/skills/git-commit-convention/: SKILL.md
fundExpert/: .env.example  API_RESPONSE_FORMAT.md  DEPENDENCIES.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  config.yaml.example  crew_service.py  example_client.ts  main.py  pyproject.toml
fundExpert/agents/: __init__.py  data_collector.py  strategy_analyst.py
fundExpert/api/: __init__.py  routes.py
fundExpert/tests/: README.md  __init__.py  debug_akshare.py  example_client.py  test_data_fetcher.py  test_service.py
fundExpert/tools/: __init__.py  data_fetcher.py  fund_tools.py
server/: db.ts  index.ts  package.json  pnpm-lock.yaml  tsconfig.json
server/api/: data.ts  fund.ts  funds.ts  sync.ts
server/utils/: fund.ts  httpClient.ts  math.ts
src/: App.vue  main.ts  style.css
src/assets/scss/: global.scss
src/components/: Card.vue  FundSearchInput.vue  StatCard.vue
src/components/FundDetail/: FundHoldingChart.vue
src/components/FundDrawer/: FundDrawer.vue
src/components/Layout/: Layout.vue  Page.vue  Sidebar.vue  index.vue
src/router/: index.ts
src/store/: aiAnalysis.ts  data.ts  fundDrawer.ts  funds.ts  index.ts  overview.ts
src/views/: AILabView.vue  AssetsView.vue  DashboardView.vue  FundDetailView.vue  TransparencyView.vue
src/views/DashboardView/: AssetAllocation.vue  FundsPosition.vue  StatsCards.vue  index.vue
(+6 files in other folders)
